<resources>
    <string name="app_name">DriverSupport</string>
    <string name="camera_instruction">To connect a camera follow these instructions:
        1. Choose Wi-Fi that corresponds to your camera and connect to it.
        2. Turn on Location.</string>
    <string name="led_instruction">To connect a led controller follow these instructions:
        1. Turn on Bluetooth and choose your device.
        2. Turn on Location.</string>
    <string name="fitness_band_instruction">To connect a fitness band follow these instructions:
        1. Turn on Bluetooth and choose your device.
        2. Press OK on the band.
        3. Turn on Location.</string>
    <string name="devices">Устройства</string>
    <string name="get_started">Начать</string>
    <string name="current_state">Состояние:</string>
    <string name="prediction">Прогноз:</string>
    <string name="pulse">Пульс:</string>
    <string name="movement">Движение:</string>
    <string name="change_light_color">Сменить цвет света</string>
    <string name="change_alarm_volume">Изменить громкость сингала</string>
    <string name="change_alarm_sound">Изменить звук сингала</string>
    <string name="delete_data">Удалить данные</string>
    <string name="settings">Настройки</string>
    <string name="main">Главная</string>
    <string name="fitness_band">Браслет</string>
    <string name="camera">Камера</string>
    <string name="sound_signal">Звуковой сигнал</string>
    <string name="rtsp_link">Ссылка RTSP</string>
    <string name="rtsp_username">Имя пользователя RTSP</string>
    <string name="rtsp_password">Пароль RTSP</string>
    <string name="save">Сохранить</string>
    <string name="device_name">Имя устройства</string>
    <string name="available_bluetooth_devices">Доступные Bluetooth устройства</string>
    <string name="light_signal">Световой сигнал</string>
    <string name="choose_signal_sound">Выберите звук сигнала</string>

    <string name="sleeping">СПИТ</string>
    <string name="awake">НЕ СПИТ</string>
</resources>