<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/et_camera_device_name"
            android:hint="@string/device_name"
            android:layout_marginBottom="@dimen/normal_margin"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/et_camera_rtsp_link"
            android:hint="@string/rtsp_link"
            android:layout_marginBottom="@dimen/normal_margin"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/et_camera_rtsp_username"
            android:hint="@string/rtsp_username"
            android:layout_marginBottom="@dimen/normal_margin"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/et_camera_rtsp_password"
            android:hint="@string/rtsp_password"
            android:layout_marginBottom="@dimen/normal_margin"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:id="@+id/bt_camera_save"
            android:layout_gravity="center_horizontal"/>


    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>


<!--

<TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/camera_instruction"
        android:textSize="@dimen/normal_text_size"
        app:layout_constraintBottom_toTopOf="@+id/horizontal_guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginEnd="@dimen/normal_margin"
        android:layout_marginStart="@dimen/normal_margin"/>

    <ImageView
        android:layout_width="@dimen/icon_size"
        android:layout_height="@dimen/icon_size"
        android:src="@drawable/baseline_wifi_24"
        app:layout_constraintEnd_toStartOf="@+id/vertical_guideline"
        app:layout_constraintTop_toBottomOf="@id/horizontal_guideline" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/vertical_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horizontal_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />


    <ImageView
        android:layout_width="@dimen/icon_size"
        android:layout_height="@dimen/icon_size"
        android:src="@drawable/baseline_location_on_24"
        app:layout_constraintStart_toStartOf="@+id/vertical_guideline"
        app:layout_constraintTop_toBottomOf="@id/horizontal_guideline" />


-->