<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/normal_margin">

    <!--state-->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/state_box"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:paddingTop="@dimen/small_margin"
        android:paddingBottom="@dimen/small_margin">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/current_state"
            android:textSize="@dimen/normal_text_size"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guideline"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

        <Button
            android:id="@+id/tv_main_state"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:clickable="false"
            android:backgroundTint="@color/red"
            android:text="Спит"
            android:textSize="@dimen/normal_text_size"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/guideline"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <!--camera-->
    <LinearLayout
        android:id="@+id/box_main_camera"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/state_box"
        android:orientation="vertical"
        android:background="@drawable/rounded_back">

        <TextView
            android:id="@+id/tv_main_camera_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/camera"
            android:textSize="@dimen/sub_header_text_size"
            android:paddingBottom="@dimen/small_margin"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <SurfaceView
                android:id="@+id/videoView"
                android:layout_width="@dimen/video_width"
                android:layout_height="@dimen/video_height"
                android:src="@drawable/baseline_wifi_24"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <!--<com.alexvas.rtsp.widget.RtspSurfaceView
                android:id="@+id/videoView"
                android:layout_width="@dimen/video_width"
                android:layout_height="@dimen/video_height"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />-->

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/prediction"
                android:textSize="@dimen/normal_text_size"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/videoView"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="@dimen/normal_margin"/>

            <Button
                android:id="@+id/tv_main_camera_prediction"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:backgroundTint="@color/red"
                android:text="Спит"
                android:clickable="false"
                app:layout_constraintStart_toEndOf="@+id/videoView"
                app:layout_constraintTop_toBottomOf="@+id/textView3" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

    <!--fitness band-->
    <LinearLayout
        android:id="@+id/box_main_band"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/box_main_camera"
        android:orientation="vertical"
        android:background="@drawable/rounded_back"
        android:layout_marginTop="@dimen/small_margin">

        <TextView
            android:id="@+id/tv_main_band_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fitness_band"
            android:textSize="@dimen/sub_header_text_size"
            android:paddingBottom="@dimen/small_margin"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <GridLayout
                android:id="@+id/grid"
                android:layout_width="@dimen/video_width"
                android:layout_height="@dimen/video_height"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:columnCount="2"
                android:padding="@dimen/small_margin">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pulse"
                    android:textSize="@dimen/normal_text_size"
                    android:layout_column="0"
                    android:layout_row="0"/>

                <TextView
                    android:id="@+id/tv_main_pulse"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/header_text_size"
                    android:layout_gravity="end"
                    android:text="87"
                    android:layout_column="1"
                    android:layout_row="0"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/normal_text_size"
                    android:text="@string/movement"
                    android:layout_column="0"
                    android:layout_row="1"/>

                <TextView
                    android:id="@+id/tv_main_movement"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/normal_text_size"
                    android:text="Рекдое"
                    android:layout_gravity="end"
                    android:layout_column="1"
                    android:layout_row="1"/>


            </GridLayout>

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/prediction"
                android:textSize="@dimen/normal_text_size"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/grid"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="@dimen/normal_margin"/>

            <Button
                android:id="@+id/tv_main_band_prediction"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:text="Спит"
                android:backgroundTint="@color/red"
                android:clickable="false"
                app:layout_constraintStart_toEndOf="@+id/grid"
                app:layout_constraintTop_toBottomOf="@+id/textView5" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </LinearLayout>


    <!--includes-->

    <!--<LinearLayout
        android:id="@+id/box_main_signal_sound"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/box_main_band"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/small_margin">

        <include layout="@layout/item_signal"
            android:id="@+id/signal_main_alarm"/>



    </LinearLayout>

    <LinearLayout
        android:id="@+id/box_main_signal_led"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/box_main_signal_sound"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/small_margin">


        <include layout="@layout/item_signal"
            android:id="@+id/signal_main_led"/>


    </LinearLayout>-->

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:id="@+id/box_main_signal_sound"
        app:layout_constraintTop_toBottomOf="@id/box_main_band"
        android:background="@drawable/rounded_back">

        <TextView
            android:id="@+id/tv_sound_signal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sound_signal"
            android:textSize="@dimen/normal_text_size"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switch_sound_signal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:id="@+id/box_main_signal_light"
        app:layout_constraintTop_toBottomOf="@id/box_main_signal_sound"
        android:background="@drawable/rounded_back">

        <TextView
            android:id="@+id/tv_light_signal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sound_signal"
            android:textSize="@dimen/normal_text_size"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switch_light_signal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>